Added files via Greta

--- a/index.html
+++ b/index.html
@@ -2,8 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BinHaulerPro</title>
+    <title>BinHaulerPro - Dumpster Rental Management</title>
+    <!-- Google Maps JavaScript API with Places Library -->
+    <script async defer 
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDsHnvxNRDYqAAX9Y4fgBpkbCBTCYgZsx0&libraries=places,geometry"
+      onerror="console.error('Failed to load Google Maps API')">
+    </script>
+    <!-- jsPDF for invoice generation -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   </head>
   <body>
     <div id="root"></div>
